events/static/events/css/raffle.scss
.raffle-base {
  i {
    margin-right: .5rem;
  }
}

.raffle-page {
  .gifts {
    ol {
      margin-top: 1rem;
    }
    li {
      margin-left: 3rem;
      font-size: 2rem;
      p {
        line-height: 2rem;
      }
    }
  }

  .launch-raffle {
    margin-top: 2rem;
  }
}

.raffle-gift-page {
  .current-gift {
    font-size: 2rem;
    line-height: 2.3rem;
  }

  .awarded-ticket {
    font-size: 1.8rem;
    background-color: $yellow-bg;
    display: inline-block;
    padding: .4rem;
    border-radius: .3rem;
    margin-top: .5rem;
  }

  .raffle-buttons {
    margin-top: 2rem;
  }
}

